# CMakeProjectTemplates

./: .gitignore  LICENSE  README.md
CMakeCxxProjectTemplate/: .gitignore  CMakeLists.txt  README.md  main.cpp
CMakeCxxProjectTemplate/scripts/: clean_project.py
CMakeCxxProjectTemplate/src/: CMakeLists.txt
CMakeCxxProjectTemplate/src/hello/: hello.cpp
CMakeOGLProjectTemplate/: .gitignore  CMakeLists.txt  README.md  main.cpp
CMakeOGLProjectTemplate/includes/hello/: hello.hpp
CMakeOGLProjectTemplate/scripts/: make_project.py  setup_project.py
CMakeOGLProjectTemplate/src/: CMakeLists.txt
